# rvision

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  release-please-config.json  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
docs/: getting-started.md  module-spec-template.md  roadmap.md
docs/adr/: 0000-template.md  0001-terminal-backend-crossterm.md  0002-render-seam-backend-double-buffer.md  0003-view-model-trait-objects-messages.md  0004-event-engine-three-phase.md  0005-colour-roles-truecolour-ready.md  0006-unicode-full-now.md  0007-mouse-architected-keyboard-first.md  0008-view-coordinates-canvas.md  0009-application-shell-menu-overlay.md  0010-modal-dialogs-and-focus-aware-controls.md  0011-drop-shadows-per-view-protocol.md  0012-paste-in-via-bracketed-paste.md  0013-help-format-and-model.md  0014-documentation-process.md  0015-scroll-chrome-per-view-protocol.md  0016-unify-window-dialog-dynamic-desktop.md  0017-resize-propagation-per-view-protocol.md  0018-cascading-menu-submenus.md  0019-context-menu-anchor-request.md  0020-followable-help-links.md  0021-window-scoped-context-help.md  0022-release-process-and-versioning.md  0023-truecolour-capability-detection.md  0024-layered-resource-loading.md  0025-theme-file-format-and-merge.md  0026-theme-editor-desktop-composition.md  0027-mouse-capture-for-drag-interactions.md  0028-global-keyboard-accelerator-table.md  README.md  (+10 more)
examples/: chrome.rs  combo_box.rs  dialogs.rs  event_probe.rs  hello.rs  hello2.rs  help_builder.help  help_builder.rs  mdi.rs  text_area.rs  theme_builder.rs  theme_editor.rs  theme_picker.rs  truecolour.rs
src/: app.rs  arrange.rs  backend.rs  buffer.rs  canvas.rs  cell.rs  color.rs  command.rs  crossterm_backend.rs  event.rs  geometry.rs  help.rs  lib.rs  osc52.rs  resource.rs  theme.rs  view.rs  wrap.rs
(+114 files in other folders)
